# python-project-52

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: pyci.yml
locale/ru/LC_MESSAGES/: django.mo  django.po
task_manager/: __init__.py  base_tests.py  base_urls.py  base_views.py  mixins.py  settings.py  tools.py  urls.py  views.py
task_manager/base/: __init__.py  auth.py  base.py  base_tests.py  base_views.py
task_manager/labels/: forms.py  models.py  tests.py  urls.py  views.py
task_manager/labels/fixtures/: labels.json
task_manager/labels/migrations/: 0001_initial.py  0002_alter_label_options_alter_label_unique_together.py  0002_alter_label_options_label_created_at_and_more.py  0003_alter_label_options_alter_label_created_at.py  0004_alter_label_name_alter_label_unique_together.py
task_manager/mixins/: __init__.py  auth.py  base.py  forms.py  testing.py  urls.py  views.py
task_manager/statuses/: forms.py  models.py  tests.py  urls.py  views.py
task_manager/statuses/fixtures/: statuses.json
task_manager/statuses/migrations/: 0001_initial.py  0002_alter_status_options_alter_status_unique_together.py  0002_alter_status_options_status_created_at_and_more.py  0003_alter_status_options_alter_status_created_at_and_more.py  0004_alter_status_name_alter_status_unique_together.py
task_manager/tasks/: filter.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/templates/: 404.html  500.html  index.html  layout.html
task_manager/users/: forms.py  models.py  tests.py  urls.py  views.py
(+27 files in other folders)
